added a json response for take photo and some bugfixes

--- a/templates/image.html
+++ b/templates/image.html
@@ -1,3 +1,3 @@
 Hi this is a raspberry camera
 
-<img src="{{ url_for('static', filename=path) }}">
+<img width="640" height="480" src="{{ url_for('static', filename=path) }}">
